# quarto-slides

./: Makefile  README.md  custom.scss  index.qmd  pyproject.toml
