[project]
name = "quarto-slides"
version = "0.1.0"
description = "Quarto slides generator"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "quarto-cli>=1.7.32",
]

[dependency-groups]
dev = [
    "black",
    "ipykernel",
    "ipywidgets",
    "isort",
    "pre-commit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
your-cli = "your_package.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/your_package"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.black]
line-length = 79
preview = true
skip-string-normalization = false
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"
line_length = 79
skip = ["__init__.py"]
